syntax = "proto3";

option csharp_namespace = "ClientServiceProtos";

// https://github.com/protocolbuffers/protobuf/blob/main/src/google/protobuf/wrappers.proto
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service ClientService {

	rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);

	rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);

	rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);

	rpc GetClientById (GetClientByIdRequest) returns (ClientResponse);

	rpc GetClients (GetClientsRequest) returns (GetClientsResponse);
}

message CreateClientRequest {
        string document = 1; 
        string surname = 2;
        string firstName = 3;
        string patronymic = 4;
}

message CreateClientResponse {
		google.protobuf.Int32Value clientId = 1;
		int32 errCode = 2;
        string errMessage = 3;

}

message UpdateClientRequest {
        int32 clientId = 1;
        string document = 2;
        string surname = 3;
        string firstName = 4;
        string patronymic = 5;
}

message UpdateClientResponse {
		int32 errCode = 1;
        string errMessage = 2;
}

message DeleteClientRequest {
        int32 clientId = 1;
}

message DeleteClientResponse {
		int32 errCode = 1;
        string errMessage = 2;
}

message GetClientByIdRequest {
        int32 clientId = 1;
}

message GetClientByIdResponse {
        ClientResponse client = 1;
        int32 errCode = 2;
        string errMessage = 3;
}

message GetClientsRequest{

}

message GetClientsResponse{
    repeated ClientResponse clients = 1;
    int32 errCode = 2;
    string errMessage = 3;
}

message ClientResponse {
		int32 clientId = 1;
        string document = 2;
        string surname = 3;
        string firstName = 4;
        string patronymic = 5;
        repeated Pet pets = 6;
        repeated Consultation consultations = 7;
}

message Pet {
    int32 petId = 1;
    string name = 3;
	google.protobuf.Timestamp birthday = 4;
}

message Consultation {
    int32 consultationId = 1;
    google.protobuf.Timestamp consultationDate = 4;
	string description = 5;
}